--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,7 +22,7 @@ jobs:
         node-version: ${{ matrix.node-version }}
         
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Build
       run: npm run build
@@ -48,7 +48,7 @@ jobs:
         node-version: '20.x'
         
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Run linter
       run: npm run lint
@@ -65,7 +65,7 @@ jobs:
         node-version: '20.x'
         
     - name: Install dependencies
-      run: npm ci
+      run: npm install
       
     - name: Build
       run: npm run build
